app/assets/stylesheets/pages/_key_indicators.scss
  .highlight-text {
    color: $dark-gray;
    font-weight: bold;
  }

  .info-text {
    font-weight: 500;
  }

  .alert-text {
    font-weight: 500;
    color: red !important;
  }



div.partner-container {
  float: left;
  width: 35% !important;
  margin-right: 0px !important;
}

div.kir-container-title {
  margin-top: 30px;
  margin-left: 10%;
  margin-right: 10%;
  clear: both;

  h1 {
    font-size: 24px;
    font-weight: bold;
    color: black;
  }

  h2 {
    font-size: 17px;
    margin-top: 14px;
    font-weight: 700;
    color: $dark-gray;
  }
}

.first-container {
  margin-top: 80px !important;
}

div.kir-container {
  margin-top: 30px;
  margin-left: 10%;
  margin-right: 10%;
  background-color: white;
  padding: 20px 20px 20px 20px;
  border-radius: 12px;
  box-shadow: 2px 2px 3px #d2ddec;

  .submit {
    width: 100%;
    font-weight: 700;
    font-size: 16px;
    border-radius: 4px;
  }

  h1 {
    font-size: 24px;
    font-weight: bold;
    color: black;
  }

  h2 {
    font-size: 17px;
    margin-top: 14px;
    font-weight: 700;
    color: $dark-gray;
  }

  h3 {
    font-size: 17px;
    margin-top: 27px;
    font-weight: 700;
    color: $dark-gray;
  }

  span.website {
    color: $blue;
  }

  span.company-status {
    color: $blue;
    font-weight: bold;
  }

  .example {
    color: $light-gray;
  }

  #risk_key_indicator_report_input_data {
    width: 100%;
    height: 140px;
  }
}

.risk-flag {
  float: left;
  border-radius: 50%;
  width: 1.8em;
  height: 1.8em;
  margin: 0 0.1em;
  text-align: center;

  span {
    display: inline-block;
    vertical-align: middle;
  }
}

.gray-flag {
  background-color: #969595;
  color: white;
}

.green-flag {

  background-color: #a6f398;
  color: #0e8e14;
}

.yellow-flag {

  background-color: #f1ea0a;
  color: #a59727;
}

.red-flag {
  background-color: #ff0000;
  color: #e6a9a9;
}

